Create a form for File model
1. Use ModelForm class to dynamically create a form based on the model
2. Add the form to the view's context
3. Place the form in template using as_p to dynamically render it's
   fields

Signed-off-by: Malcolm VanOrder <mvanorder1390@gmail.com>

--- a/demo_django/templates/read_docstring_main.html
+++ b/demo_django/templates/read_docstring_main.html
@@ -7,6 +7,8 @@
 <body>
 Hello, world. You're at the read docstring index.
 <br /><br />
-the value of foo is "{{ foo }}"
+the value of foo is "{{ foo }}"<br /><br />
+
+{{ form.as_p }}
 </body>
 </html>
